<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.addstory.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/btnPostStory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/post"
        android:backgroundTint="@color/chocolate"
        app:layout_constraintEnd_toEndOf="@+id/ed_deskripsi"
        app:layout_constraintStart_toStartOf="@+id/ed_deskripsi"
        app:layout_constraintTop_toBottomOf="@+id/ed_deskripsi" />

    <ImageView
        android:id="@+id/imageStoryUpload"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_image_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageStoryUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/camera_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/chocolate"
            android:text="@string/camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/galery_btn"/>

        <Button
            android:id="@+id/galery_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/chocolate"
            android:text="@string/galery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/camera_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>


        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="include location?"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_wrapper" />

        <EditText
            android:id="@+id/ed_deskripsi"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Description"
            android:background="@drawable/border_description"
            android:gravity="top|left"
            android:hint="@string/story_description"
            android:inputType="textMultiLine"
            android:maxHeight="180dp"
            android:maxLines="8"
            android:padding="15dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/imageStoryUpload"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageStoryUpload"
            app:layout_constraintTop_toBottomOf="@+id/checkbox"
            tools:ignore="RtlHardcoded" />

        <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

<!--    <ProgressBar-->
<!--        android:id="@+id/progressBarAddStory"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:theme="@style/ProgressBarStyleWhite"-->
<!--        android:visibility="gone" />-->

<!--        <EditText-->
<!--            android:id="@+id/ed_deskripsi"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            android:background="@null"-->
<!--            android:ems="10"-->
<!--            android:hint="Deskripsi"-->
<!--            android:inputType="textMultiLine"-->
<!--            android:minHeight="48dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0" />-->


<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/button_container"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/ed_deskripsi">-->

<!--            <Button-->
<!--                android:id="@+id/camera_btn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Camera"-->
<!--                app:layout_constraintEnd_toStartOf="@id/galery_btn"-->
<!--                app:layout_constraintHorizontal_bias="0.6"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <Button-->
<!--                android:id="@+id/galery_btn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Galery"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.6"-->
<!--                app:layout_constraintStart_toStartOf="@id/camera_btn"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->


<!--        <ImageView-->
<!--            android:id="@+id/preview"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="250dp"-->
<!--            android:src="@drawable/ic_baseline_image_24"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/button_container"-->
<!--            app:layout_constraintVertical_bias=".1" />-->


<!--        <Button-->
<!--            android:id="@+id/upload_btn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Upload"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/preview" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>